<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">СмартЭкспресс</string>
    <string name="submit">OK</string>
    <string name="register">Регистрация</string>
    <string name="phone">Телефон</string>
    <string name="full_name">Полное имя</string>
    <string name="password">Пароль</string>
    <string name="password_confirm">Подтверждение пароля</string>
    <string name="logout">Выйти</string>
    <string name="settings">Настройки</string>
    <string name="about">О СмартЭкспресс</string>
    <string name="must_not_be_empty">Поле неверно заполнено</string>
    <string name="title_activity_login">Вход в систему</string>
    <string name="error_invalid_password">Пароль должен состоять только из букв и цифр латинского алфавита и иметь длину не менее 6ти символов</string>
    <string name="error_password_does_not_match">Пароли не совпадают</string>
    <string name="error_phone_not_valid">Телефон должен быть в формате:7хххххххххх</string>
    <string name="rest_error">Сервер SmartExpress вернул ошибку. Повторите попытку позднее. Возможно ваше приложение требует обновления.</string>
    <string name="no_network_error">Проблемы с сетью. Невозможно подключиться к серверу.</string>
    <string name="unknown_error">Неизвестная ошибка. Возможно ваше приложение требует обновления.</string>
    <string name="invalid_login_or_password">Неверный логин или пароль</string>
    <string name="working">Смартэкспресс</string>
    <string name="currently_working_for_smartexpress">На работе в Смартэкспресс</string>
    <string name="bad_device">Ваше устройство не поддерживается</string>
    <string name="gcm_problem">Проблема с регистрацией GCM. Возможно ваше приложение требует обновления.</string>
    <string name="done_ok">Заказ успешно завершен</string>
    <string name="updated_ok">Заказ успешно обновлен</string>
    <string name="application_failed">Приложение сломалось</string>
    <string name="activation_code">Активационный код</string>
    <string name="about_see">СмартЭкспресс ver %1$s %2$s</string>
    <string name="order_canceled">Заказ отменен</string>
    <string name="order_updated_by_operator">Заказ обновлен оператором</string>
    <string name="order_assigned_to_you">На Вас назначен заказ</string>
    <string name="new_orders_pending">Поступило %d новых заказов</string>
    <string name="new_order_offered">Вам предлагают заказ</string>
    <string name="deadline_time">до %1$s</string>
    <string name="deadline_interval">%1$s - %2$s</string>

    <!--order -->
    <string name="order_header">№%1$d из %2$s %3$s </string>
    <string name="currency_format">%1$s руб</string>
    <string name="buyout">Выкуп: %1$s</string>
    <string name="i_picked_up_this_order">Я забрал этот заказ</string>
    <string name="i_arrived_to_pickup_point">Я приехал на точку</string>
    <string name="i_delivered_this_order">Я доставил этот заказ</string>
    <string name="gps_disabled_message">Работа в приложении невозможна без GPS.</string>
    <string name="enable">Включить</string>
    <string name="exit">Выйти</string>
    <string name="finance">Финансы</string>
    <string name="credit_account">Мат. ценности</string>
    <string name="collection_account">Задолжность</string>
    <string name="checking_account">Зарплатный</string>
    <string name="finished_orders">Завершенные</string>
    <string name="active_orders">Активные заказы</string>
    <string name="courier_search_orders">Предлагаемые</string>
    <string name="requestCode">Выслать код по смс</string>
    <string name="resetPassword">Сбросить пароль</string>
    <string name="confirmation_code">Код подтверждения</string>
    <string name="error_requesting_password_change">Произошла ошибка</string>
    <string name="confirmation_code_must_be_requested">Необходимо запросить код подтверждения</string>
    <string name="reason">Причина отказа</string>
    <string name="reject">Ок</string>
    <string name="cancel">Отмена</string>

</resources>
