<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/fields_login_form"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

            <EditText
                android:id="@+id/userPhoneLoginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="12dip" />

            <EditText
                android:id="@+id/passwordLoginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="12dip" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <Button
                        android:id="@+id/submitLoginForm"
                        android:layout_width="100dip"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />
                </LinearLayout>

                <Button
                    android:id="@+id/registerLoginForm"
                    android:layout_width="200dip"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

    <Button
            android:id="@+id/resetPasswordForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetPassword"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />

        </LinearLayout>