<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/statusMenu"
          android:icon="@drawable/status_online"
          android:title="Свободен"
          app:showAsAction="always">
            <menu>
            <group android:checkableBehavior="single">
                    <item android:id="@+id/statusFree"
                          android:icon="@drawable/status_online"
                          android:title="Работаю"
                          app:showAsAction="always" />
                    <item android:id="@+id/statusBusy"
                          android:icon="@drawable/status_offline"
                          android:title="Отдыхаю"
                          app:showAsAction="always" />
                </group>
              </menu>
    </item>

    <item android:id="@+id/about"
          android:title="@string/about" />
    <item android:id="@+id/finance"
          android:title="@string/finance" />
    <item android:id="@+id/logout"
          android:title="@string/logout" />
</menu>