<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/fields_password_reset_form"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneText"
            android:layout_gravity="center_horizontal"
            android:hint="@string/phone" />
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
    <Button
            android:id="@+id/requestCodeButton"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/requestCode"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:id="@+id/confirmationCodeEditText"
            android:layout_gravity="center_horizontal"
            android:hint="@string/confirmation_code" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <Button
                android:id="@+id/resetButton"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/resetPassword"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>
